organized all files

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
    </div>
    <bold>
    </bold>
-   <h1>China Impact Project</h1>
+   <p id="title">China Impact Project</p>
 
    <main>
       
@@ -34,8 +34,8 @@
            
       <section id="content1">
          <form id= "source_selector" onsubmit="false" target="_top">
-            <label for="data_source" style="background-color: white;" >Data Source:</label>
-            <select name="data_source" id="data_source" onchange="updateSource()" style="">
+            <label for="data_source" style="background-color: white;">Data Source:</label>
+            <select name="data_source" id="data_source" onchange="updateSource()">
               <option value="citations">Citation Data</option>
               <option value="papers">Paper Publishing Data</option>
               <option value="roads">Street/Road Data</option>
