--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta content="utf-8" http-equiv="encoding">
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Attitude Toward China </title>
+    <link rel="icon" type="image/x-icon" href="assets/favicon.ico">
     <link rel= "stylesheet" href="style.css">
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script type="text/javascript" src="script.js" defer></script>
