fixed major bugs

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.2/css/all.min.css" integrity="sha512-1sCRPdkRXhBV2PBLUdRb4tMg1w2YPf37qatUFeS7zlBy7jJI8Lf4VHwWfZZfpXtYSLy85pkm9GaYVYMfw5BC1A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
     <link rel= "stylesheet" href="homeStyle.css">
     <link rel= "stylesheet" href="style.css">
+    <link rel = "stylesheet" href = "https://fonts.googleapis.com/css?family=Montserrat">
     <script src="https://d3js.org/d3.v5.min.js"></script>
     <script type="text/javascript" src="accordianScript.js" defer></script>
     <!-- <script type="text/javascript" src="data_config.js" defer></script> -->
@@ -26,17 +27,17 @@
              <!-- Title -->
              <div id="title-container">
                 <h1 style="margin: 0;">Understanding</h1>
-                <div id="title-row">
-                    <h3>China with Numbers </h3>
+                <h3>China with Numbers </h3>
+                <!-- <div id="title-row"> -->
                     <!-- <h4>with</h4>
                     <h3>numbers</h3> -->
-                </div>
+                <!-- </div> -->
                 <!-- <p>Understanding China with Numbers</p> -->
                 <!-- <span>Understanding</span>
                 <span>China with Numbers</span> -->
              </div>
              <!-- Search Bar -->
-             <img style = "height: 5em; width: 23em" src="assets/ccc_logo.png">
+             <!-- <img style = "height: 5em; width: 23em" src="assets/ccc_logo.png">  -->
              <div id="search-container">
                 <form action=""></form>
                     <input class="input-field" type="text" placeholder="search statistics...">
@@ -277,12 +278,12 @@
                             <div class="modal-content">
                                 <span class="close">&times;</span>
                                 <h2>Data Visualizer User Guide</h2>
-                                <h4>Choosing Data</h4>
+                                <i><h4>Choosing Data</h4></i>
                                 <p>Use the first selector labeled <i>"Data Source"</i> to choose from our available data. Currently we have data on science, internet use, road construction and patents.
                                 </p>
-                                <h4>Isolating Groups</h4>
+                                <i><h4>Isolating Groups</h4></i>
                                 <p>For data sources with many lines, you can select a subcategory using the second selector labeled <i>"Subcategory"</i> to view line groups with fewer lines. This extends into domestic and cross-country analysis.</p>
-                                <h4>Buttons</h4>
+                               <i><h4>Buttons</h4></i>
                                 <p>
                                     <i class="fa-solid fa-video fa-xl"></i>
                                     Click the video button to disable the graphs animation.
